--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.7",
     "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scroll-to-top": "^3.0.0",
+    "swr": "^2.2.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
