--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scroll-to-top": "^3.0.0",
+    "swiper": "^11.1.15",
     "swr": "^2.2.5",
     "yup": "^1.4.0"
   },
